# dataWeb

./: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_INDEX.md  README.md  docker-compose.prod.yml  docker-compose.yml  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/mock/: __init__.py  generators.py  registry.py  samples.py
apps/api/app/real_data/: __init__.py  ab_reader.py  bigwig_reader.py  chr_utils.py  ctcf_motif_reader.py  pei_reader.py  registry.yaml  sample_resolver.py  tad_reader.py
apps/api/app/routes/: bed.py  bigwig.py  ctcf.py  ctcf_motif.py  differential.py  hic.py  samples.py  species.py  sv.py
apps/api/scripts/: verify_registry.py
apps/api/tests/: conftest.py  test_ctcf_motif.py  test_health.py  test_mock.py  test_pei.py  test_real_tad.py
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/api/: client.ts  types.ts
apps/web/src/genomics/: coords.ts
apps/web/src/hooks/: useActiveSample.ts  useD3Zoom.ts  useRangeQuery.ts  useSampleCatalog.ts  useTrackSampleSelection.ts
apps/web/src/routes/: AbIndexRoute.tsx  ComparisonRoute.tsx  CtcfLoopsRoute.tsx  CtcfMotifRoute.tsx  DifferentialHicRoute.tsx  GeneRoute.tsx  route.css  (+12 more)
docs/: DEPLOYMENT.md
docx/data/: readme.md
docx/plan/: architecture.md  brief.md  data_inventory.md  real_data_integration.md  visualizable_features.md
docx/refrences/demo/: chromatin3d.html  diff.html  hic.html  test.html
(+56 files in other folders)
