[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataweb-api"
version = "0.1.0"
description = "dataWeb FastAPI backend (scaffold)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pyBigWig>=0.3.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "requires_real_data: tests that need the real omics dataset on disk (skipped in CI)",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
